WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115607
REGRESSION(
r148312
): Crash when calling WKPageClose(page) followed by WKPageTerminate(page)
https://bugs.webkit.org/show_bug.cgi?id=115607
Summary
REGRESSION(r148312): Crash when calling WKPageClose(page) followed by WKPageT...
Sam Weinig
Reported
2013-05-04 17:36:08 PDT
r148312
caused a regression where we now seeing crashes in Safari when closing pages that are unresponsive (done via WKPageClose(page) followed by WKPageTerminate(page)). <
rdar://problem/13702008
>
Attachments
Crash Fix
(8.58 KB, patch)
2013-05-04 17:42 PDT
,
Sam Weinig
no flags
Details
Formatted Diff
Diff
Patch+Test (this time without commenting out the fix)
(8.58 KB, patch)
2013-05-04 17:44 PDT
,
Sam Weinig
benjamin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2013-05-04 17:42:24 PDT
Created
attachment 200552
[details]
Crash Fix
Sam Weinig
Comment 2
2013-05-04 17:44:26 PDT
Created
attachment 200553
[details]
Patch+Test (this time without commenting out the fix)
Sam Weinig
Comment 3
2013-05-04 19:31:36 PDT
Committed revision 149573
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug