REGRESSION(r148312): Crash when calling WKPageClose(page) followed by WKPageTerminate(page) <rdar://problem/13702008> https://bugs.webkit.org/show_bug.cgi?id=115607

Reviewed by Benjamin Poulain.

Source/WebKit2:

API Test: WebKit2.CloseThenTerminate

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::resetStateAfterProcessExited):
Don't try to reset the state if the page is closed, it won't work and its not worth it.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2/CloseThenTerminate.cpp: Added.
(TestWebKitAPI::didFinishLoadForFrame):
(TestWebKitAPI::TEST):
Add test that calls WKPageClose, follow by WKPageTerminate. If it crashes, its not working.



Canonical link: https://commits.webkit.org/134037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149573 268f45cc-cd09-0410-ab3c-d52691b4dbfc