Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -3854,6 +3854,9 @@ void WebPageProxy::processDidCrash()
 
 void WebPageProxy::resetStateAfterProcessExited()
 {
+    if (!isValid())
+        return;
+
     ASSERT(m_pageClient);
     m_process->removeMessageReceiver(Messages::WebPageProxy::messageReceiverName(), m_pageID);
 
